@@ -3,6 +3,8 @@ Version 0.5.2-ALPHA
     |- Compiler:  Fixed typeless functions are all recognized as constructor
     |- Compiler:  Fixed classes are lacking a cfgConfig layer
     |- Compiler:  Fixed namespace static variables lacked semicolon in EBNF
+    |- Compiler:  Added output folder cleanup
+    |- Compiler:  Flag /NOCLEANUP which prevents output folder cleanup
 Version 0.5.1-ALPHA
     |- Wrapper:   Fixed naming of -gen param (poject.oosproj instead of
     |             project.oosproj)
